fix overflow

--- a/src/parts/sert/sert.less
+++ b/src/parts/sert/sert.less
@@ -2,6 +2,7 @@
   .block(9%, 0);
   background-color: @darkest;
   padding-top  : 80px;
+  overflow-x: hidden;
   
 
   @media (max-width: @size-tablete) {
